# chatGPT

./: .gitignore  README.md  chat01.py  chat01_1.py  chat05.py  countToken.py  pyproject.toml  quiz01.py
week2/: 01. 숫자형.ipynb  02. 문자열 자료형.ipynb  03. 리스트 자료형.ipynb  04. 튜플 자료형.ipynb  05. 딕셔너리 자료형.ipynb  06. Bool 자료형.ipynb  07. 변수.ipynb  08. fi문.ipynb  09. while문.ipynb  10. for문.ipynb  11. 함수.ipynb  12. 사용자 입출력.ipynb  13. 클래스.ipynb  14. 모듈.ipynb  15. 패키지.ipynb  16. 예외 처리.ipynb
week2/game/: __init__.py
week3/Matplotlib/: 01. 그래프 기본.ipynb  02. 축.ipynb  03. 범례.ipynb  04. 스타일.ipynb  05. 파일 저장.ipynb  06. 텍스트.ipynb  07. 여러 데이터.ipynb  08. 막대 그래프 (기본).ipynb  09. 막대 그래프 (심화).ipynb  10. DataFrame 활용.ipynb  11. 누적 막대 그래프.ipynb  12. 다중 막대 그래프.ipynb  13. 원 그래프 (기본).ipynb  14. 원 그래프 (심화).ipynb  15. 산점도 그래프.ipynb  16. 여러 그래프.ipynb  17. 퀴즈.ipynb
week3/Pandas/: 01. Series.ipynb  02. DataFrame.ipynb  03. Index.ipynb  04. 파일 저장 및 열기.ipynb  13. 함수 적용.ipynb  14. 그룹화.ipynb  15. 퀴즈.ipynb  score.xlsx
week4/: 01. torch.ipynb  02. Linear Regression.ipynb  DL01.torch_MLP.ipynb  DL02.torch_lightning_MLP.ipynb  DL03.torch_MLP_visualization.ipynb  DL04.torch_simpleCNN.ipynb  DL05.torch_pretrainedCNN_tuning.ipynb  DL06.ViT with HuggingFace.ipynb  DL07.YOLOv5.ipynb
week5/: CNN_basic.ipynb  RNN_basic.ipynb  Transformer_simple.ipynb  chat01.py  chat02.py  chat03.py  chat04.py
week6/: chatGPT_colabversion.ipynb  project01.py  quiz01.ipynb
week7/: project_exam1.py  project_exam2.py  project_exam2_ui.py  project_exam3.py  project_exam3_ui.py  week7_summarize_to_3lines.ipynb  week7_챗봇.ipynb
(+2 files in other folders)
